--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html>
 	<head>
+		<meta charset="UTF-8" />
 		<title>InstilledBee's Domain</title>
-		<link href="http://fonts.googleapis.com/css?family=Roboto|Open+Sans" rel="stylesheet" type="text/css">
-		<link href="styles/reset.css" rel="stylesheet" type="text/css">
-		<link href="styles/main.css" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Roboto|Open+Sans" rel="stylesheet" type="text/css" />
+		<link href="styles/reset.css" rel="stylesheet" type="text/css" />
+		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<div class="wrapper">
@@ -14,7 +15,6 @@
 				<noscript>Please enable Javascript to fully appreciate the page's visuals.</noscript>
 			</header>
 			<div class="wrapped-content separated">
-				<a name="intro" class="anchor"></a>
 				<div class="content">
 					<h2 class="content-head">welcome!</h2>
 					<p class="content-text">Hello! I'm InstilledBee. I love making web apps, games, and anything in between. I experiment with anything that involves programming with a cup of caffeine on the side.</p>
@@ -22,7 +22,6 @@
 				</div>
 			</div>
 			<div id="projects" class="separated">
-				<a name="projects" class="anchor"></a>
 				<!--
 				<div class="wrapped-content odd-item">
 					<div class="content">
@@ -57,7 +56,6 @@
 				</div>
 			</div>
 			<div class="wrapped-content separated">
-				<a name="about" class="anchor"></a>
 				<div class="content">
 					<h2 class="content-head">about</h2>
 					<p class="content-text">I'm the guy who once spent too much time on the computer as a kid. Since the age of 6 I've been dabbling around the old Pentium I family PC (breaking it and <a href="http://en.wikipedia.org/wiki/Windows_98">Windows 98</a> a handful of times). 
@@ -85,12 +83,21 @@
 		<footer>
 			<h6 class="footer-text">Website copyright&copy; 2013 InstilledBee (Junvic Valdez)<br/>
 			Credits to <a href="http://ctrla.lt/social-media-icons-modern-metro-download/">Ctrl.Alt.Design</a> for the social media icons, and <a href="http://placekitten.com">PlaceKitten</a> for some project placeholder images.<br/>
-			Designed and built from scratch using <a href="http://validator.w3.org/check?uri=instilledbee.net">HTML5</a>, <a href="http://jigsaw.w3.org/css-validator/validator?uri=instilledbee.net">CSS3</a>, and a dash of <a href="http://www.jquery.com">jQuery</a></br></br>
+			Designed and built from scratch using <a href="http://validator.w3.org/check?uri=instilledbee.net">HTML5</a>, <a href="http://jigsaw.w3.org/css-validator/validator?uri=instilledbee.net">CSS3</a>, and a dash of <a href="http://www.jquery.com">jQuery</a><br/><br/>
 			<a href="http://github.com/instilledbee/homepage">Fork this</a> on GitHub</h6>
 		</footer>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+		<script type="text/javascript" src="scripts/jquery.sticky-kit.min.js"></script>
+		<script type="text/javascript" src="scripts/main.js"></script>
+		<!-- Google Analytics -->
+		<script type="text/javascript">
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-44684171-1', 'instilledbee.net');
+			ga('send', 'pageview');
+		</script>
 	</body>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="scripts/jquery.sticky-kit.min.js"></script>
-	<script type="text/javascript" src="scripts/main.js"></script>
-	</script>
 </html>
